tests/error/experimental_errors/daggarable.err
Error: Experimental feature (at $FILE:15:59)
   | 
13 | 
14 | @guppy
15 | def apply_control(f: Callable[[qubit], None], q: qubit) -> Daggerable[[qubit], None]:
   |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ Daggerable callable is an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
